--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-       
+        <link rel="icon" href="favicon-16x16.png">
+
         <title>Lets-Chat | Web</title>
           <!------------------------------------------------------------------Bootsrap-------------------------------------------------------------------------->
           <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
